# abstract-machine

./: CITATION.cff  LICENSE  README.md  abstract-machine.cabal  fourmolu.yaml  haskell-template.cabal  justfile
programs/: main.jsx  main2.jsx  program1.jsx  program2.jsx  program3.jsx  program4.jsx  program5.jsx  simpleWhile.jsx  todo.jsx  todolist.jsx
programs/alpha/: program9.jsx
programs/nested_imports/: program6.jsx  program7.jsx  program8.jsx
src/: AST.hs  AbstractMachine.hs  Auxiliary.hs  ConstraintGeneration.hs  Main.hs  Parser.hs  RecursionSchemes.hs  Test.hs  TypeChecker.hs
