cabal-version:      2.4
name:               abstract-machine
version:            0.1.0.0
license:            MIT
copyright:          2023 BenjaminCB
maintainer:         benjamincb@hotmail.dk
author:             BenjaminCB
category:           Web
homepage:           https://github.com/BenjaminCB/abstract-machine

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:        -Wall
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    ImportQualifiedPost
    OverloadedStrings
    TupleSections

  other-modules:
    AbstractMachine
    AST
    Parser
    Auxiliary

  build-depends:
    , base
    , containers
    , directory
    , filepath
    , mtl
    , parsec

  hs-source-dirs:     src
  default-language:   Haskell2010

executable abstract-machine
  import:  shared
  main-is: Main.hs
